# project-krasss

./: .gitignore
app/: pyproject.toml
app/templates/: base.html  explore.html  index.html  predict.html
tests/e2e/: test_navigation_flow.py
tests/integration/test_prediction/: test_prediction_page.py
tests/integration/test_routes/: test_basic_routes.py
tests/integration/test_routes/test_api_routes/: test_map_data_api.py  test_snapshot_api.py  test_summary_api.py  test_timeseries_api.py
tests/unit/test_assessment/: test_mean_squared_error.py  test_r2_score.py
tests/unit/test_cross_validator/: test_cross_validator.py
tests/unit/test_krr/: test_krr.py
tests/unit/test_preprocessing/: test_detect_categorical_columns.py  test_one_hot_encoder.py  test_preprocessor.py  test_simple_imputer.py  test_standard_scaler.py
tests/unit/test_random_fourier_features/: test_random_fourier_features.py
tests/unit/test_scenarios/: test__compute_trend.py  test_generate_scenario.py
tests/unit/test_splitter/: test_prepare_data.py  test_splitter.py
