[project]
name = "krass-app"
version = "0.1.0"
description = "Creation of an app using Flask. We will be implemeting KRR and XGBoost."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
